# 50-days-of-dev

./: .gitignore  AGENTS.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
_templates/: day-AGENTS.md.template
day-01-doc-speedrun/: AGENTS.md  Day-1: Doc Speedrun.mov  README.md  main.py  pyproject.toml
day-02-gift-scout/: AGENTS.md  README.md  main.py  pyproject.toml
day-03-repo-doctor/: AGENTS.md  BRIEF.md  README.md  main.py  pyproject.toml  sdk_smoke.py
day-04-first-principles-crew/: .gitignore  AGENTS.md  BRIEF.md  README.md  crew.py  main.py  models.py  pyproject.toml
day-04-first-principles-crew/config/: agents.yaml  tasks.yaml
day-05-learning-chat-agent/: AGENTS.md  BRIEF.md  CONTEXT.md  README.md  checkpoints.db-shm  checkpoints.db-wal  main.py  pyproject.toml
day-05-learning-chat-agent/docs/adr/: 0001-langgraph-langchain-framework.md
day-06-coding-agent-repl-harness/: .env.example  AGENTS.md  BRIEF.md  README.md  main.py  pyproject.toml  test_harness.py
day-06-coding-agent-repl-harness/openspec/changes/coding-agent-repl-harness/: proposal.md  tasks.md
day-06-coding-agent-repl-harness/openspec/changes/coding-agent-repl-harness/specs/cli/: spec.md
day-06-coding-agent-repl-harness/src/: agent_loop.py  claude_code_handoff.py  context_management.py  repl_interface.py  session_management.py  tools.py
day-07-armadillo-cli/: BRIEF.md  README.md
day-08-docs-mcp/: AGENTS.md  BRIEF.md  README.md  package-lock.json  package.json  vitest.config.ts
day-09-cached-weather-mcp/: AGENTS.md  BRIEF.md  CONTEXT.md  README.md  package.json  tsconfig.json
day-10-subagent-mcp/: AGENTS.md  BRIEF.md  CONTEXT.md  README.md  RESEARCH.md  pyproject.toml
day-11-audited-agent/: AGENTS.md  (+5 more)
day-13-smart-tool-selector/: .gitignore  AGENTS.md  BRIEF.md  CONTEXT.md  README.md  bench.py  demo.py  main.py  pyproject.toml  strategies.py  tools.py
day-13-smart-tool-selector/docs/adr/: 0001-tiered-outcome-with-failure-cap.md  0002-real-tools-not-mocks.md  0003-tool-search-model-confound-and-control-lane.md
(+69 files in other folders)
