[project]
name = "day-06-learning-chat-agent"
version = "0.1.0"
description = "Learning chat agent with LangGraph memory and human-in-the-loop feedback"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "rich>=13.0.0",
]

[tool.uv]
package = false
